	* cleaned up QoreString interface, tagged for gcc shared object 
	  visibility
	* cleaned up Hash interface, visibility tags added 
	* cleaned up List interface, visibility tags added
	* made List and Hash destructors protected to force an explicit 
	  dereference before the delete to ensure that any exceptions in 
	  contained objects can be caught

2006.11.18: David Nichols
	* starting tagging const methods, reducing excessive inlining

2006.11.17: David Nichols
	* made TIBCO adapter SDK independent from RV in configure, separated
	  modules/TIBCO into tibrv and tibae directories
	* enable 64-bit compilation on Solaris for sparc and x86

2006.11.16: David Nichols
	* changes to compile tuxedo module with tux 8.*

2006.11.15: David Nichols
	* fix for HP-UX vnsprintf() return value when buffer is too small

2006.11.13: David Nichols
	* added support for specifyingg stati linkage to libraries that may not
	  be present on some systems (configure change)
	* added some charset aliases for HP-UX character set abbreviations

2006.11.11: David Nichols
	* readded OPENSSL_DIR detection in configure
	* improved pcre library and header detection in the same was as the
	  openssl configure code
	* fixed 32-bit linking with 64-bit oracle installations (use 
	  $ORACLE_HOME/lib32)
	* changed libxml2 detection in configure to be like pcre and openssl 
	  detection, removed dependence on pkg-config

2006.11.10: David Nichols
	* added initial HP-UX itanium support to configure
	* improved openssl library and header file detection in configure; now
	  the script checks for libcrypto and guarantees to get the header files
	  associated with the libraries found

2006.11.09: David Nichols
	* updated configure to produce PA-RISC 2.0 32-bit binaries on HP-UX with
	  a 32-bit compile instead of PA-RISC 1.1 to enable linking with 32-bit 
	  Oracle libraries (where libnnz10.sl is a PA-RISC 2.0 library even 
	  though all other Oracle 32-bit libraries are PA-RISC 1.1)
